--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="images/Shreyas.jpg" alt="Shreyas Profile picture"></td>
+      <td> <img src="Images/Shreyas.jpg" alt="Shreyas Profile picture"></td>
       <td>
         <h1>Shreyas Bharadhwaj S P</h1>
         <p><em>Student at DSCE</em>
