--- a/Hobbies.html
+++ b/Hobbies.html
@@ -7,10 +7,10 @@
   <body>
     <h3>My hobies</h3>
     <ol>
-      <li><a href="videos/Rickroll.mp4">Playing Guitar</a></li>
-      <li><a href="videos/koach.mp4">Playing Sports</a></li>
+      <li><a href="Videos/Rickroll.mp4">Playing Guitar</a></li>
+      <li><a href="Videos/Koach.mp4">Playing Sports</a></li>
       <li>Making Music</li>
-      <li><a href="videos/strolled.mp4">Watching Formula 1</a></li>
+      <li><a href="Videos/Strolled.mp4">Watching Formula 1</a></li>
     </ol>
 <a href="index.html">Back</a>
 
