--- a/Hobbies.html
+++ b/Hobbies.html
@@ -5,7 +5,7 @@
     <title>My Hobbies</title>
   </head>
   <body>
-    <h3>My hobies</h3>
+    <h3>My hobbies</h3>
     <ol>
       <li><a href="Videos/Rickroll.mp4">Playing Guitar</a></li>
       <li><a href="Videos/Koach.mp4">Playing Sports</a></li>
